# Ugle

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
src/: checkout.py  example.toml  main.py  snapshot.py  utils.py
ugle/: apt_deps.py  checkout.py  example.toml  main.py  snapshot.py  utils.py
ugle/exports/: Dockerfile  Dockerfile-head.txt  Dockerfile-tail.txt  docker-compose.yaml  install.py  install.sh
