[project]
name = "ugle"
version = "0.1.0"
authors = [
  { name="Thorbjørn Djupvik", email="thorbjorn.djupvik@gmail.com" },
]
description = "Program for creating snapshots of multiple projects and their dependencies"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/tncrdk/Ugle"
Issues = "https://github.com/tncrdk/Ugle/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
